...
                    }
                    .frame(height: 0) // Invisible GeometryReader to track offset
                    
                    if vm.isLoadingPrices {
                        ProgressView()
                    } else if let iteminfo = vm.iteminfo, iteminfo.IsUntradable == 1 {
                        Text("untradable")
                    }
                    else {
                        ForEach(vm.prices, id: \.self){ data in
                            PriceTabCell(worlds: vm.worlds, data: data)
                                .buttonStyle(PlainButtonStyle())
                                .onTapGesture {
...
